# immich-cs

./: .gitignore  README.md  flake.nix  grafana.json  im-deploy.sh
apps/: README.md
apps/immich/: database-cluster.yaml  grafana-dashboard-immich.yaml  helm.sh  immich.yaml  loki-datasource.yaml  prometheus-ingress.yaml  tailscale-monitoring-setup.yaml
apps/nginx/: application.yaml  deployment.yaml
apps/root/: cloudflare-tunnel-application.yaml  cnpg-application.yaml  immich-application.yaml  loki-application.yaml  prometheus-application.yaml  promtail-application.yaml  tailscale-helm-application.yaml
im-deploy/: Cargo.toml
im-deploy/src/: commands.rs  config.rs  constants.rs  errors.rs  lib.rs  main.rs  openstack.rs  tailscale.rs  tui.rs
im-deploy/src/domain/: cluster.rs  connection.rs  mod.rs  services.rs
im-deploy/tests/: config_loading.rs  terraform_parsing.rs
im-deploy/tests/common/: mod.rs
im-deploy/tests/fixtures/: minimal_terraform.tfvars  terraform.tfvars  terraform_outputs.json  terraform_outputs_no_tailscale.json
terraform/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/manifests/: cloud-controller-openstack.yaml.tpl  csi-cinder-sc.yaml.tpl  csi-cinder-snapclass.yaml  csi-cinder.yaml.tpl  longhorn-backup-secret.yaml.tpl  longhorn-recurring-backup.yaml.tpl  longhorn.yaml.tpl
terraform/templates/: argocd-install.tpl  cloudflare-tunnel-secret.tpl  gpu-operator-install.tpl  k3s-agent.tpl  k3s-server.tpl  tailscale-argocd-serve.tpl  tailscale-grafana-serve.tpl  tailscale-install.tpl  (+4 more)
(+37 files in other folders)
