[package]
name = "im-deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde_json = "1.0.143"
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
toml = "0.8.23"
serde = { version = "1.0.228", features = ["derive"] }
